--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "scripts": {
-    "postinstall": "cd client && npm install"
+    "build": "cd client && npm install && npm run build && cd ..",
+    "deploy": "cp -a client/build/. public/",
+    "postinstall": "npm run build && npm run deploy && echo 'Client built!'"
   }
 }
