--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  
+  "name": "client",
+  "engines": {
+    "node": "8.1.2"
+  },
   "scripts": {
     "build": "cd client && npm install && npm run build && cd ..",
     "deploy": "cp -a client/build/. public/",
