--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
   "devDependencies": {
-     "react-scripts": "1.1.4",
+     "react-scripts": "1.1.4"
   },
   "author": "",
   "license": "ISC"
