--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "8.1.2"
   },
   "scripts": {
-    "build": "cd client && npm install && npm run build && cd ..",
+    "build": "cd client && yarn install && yarn run build && cd ..",
     "deploy": "cp -a client/build/. public/",
     "postinstall": "yarn run build && yarn run deploy && echo 'Client built!'"
   },
