--- a/client/package.json
+++ b/client/package.json
@@ -28,9 +28,7 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
-  "devDependencies": {
-     "react-scripts": "1.1.4"
-  },
+  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
